﻿Delta versioon 5.1.2.329
Tarnega tulevad kaasa järgmised
Parandused:
DELTA-792 (DELTA-320) - Toimiku elukäigu muudatus ei salvestu
DELTA-788(DELTA-381) Arvamuse andiseks faile ei saa tavakasutaja avada
DELTA-779 (DELTA-371) (DELTA-370) Valides lõpu kuupäevaks algus kuupäevast varasema kuupäva, paneb süsteem alguskuupäeva ning kalendris on varasemate kuupäevade kohalt aktiivne
DELTA-789(DELTA-382) Vastusdokument ei liigu alusdokumendi terviktöövoogu
DELTA-787 (DELTA-383) Dokumentide arhivaalide loetellu tõstmise lõpetamine

Lisaarendus:
DELTA-791 - Delta 2014 tööülesannete kustutamise skript