@@ -1,20 +1,17 @@
 package ee.webmedia.alfresco.volume.job;
 
 import java.io.Serializable;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Calendar;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import org.alfresco.service.cmr.repository.NodeRef;
 import org.alfresco.service.cmr.repository.NodeService;
 import org.alfresco.service.namespace.QName;
-import org.apache.commons.lang.StringUtils;
+import org.alfresco.util.Pair;
+import org.alfresco.web.bean.repository.Node;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.joda.time.DateTime;
-import org.joda.time.DateTimeConstants;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 import org.quartz.StatefulJob;
@@ -23,35 +20,37 @@ import ee.webmedia.alfresco.archivals.model.ArchivalsModel;
 import ee.webmedia.alfresco.archivals.model.ArchiveJobStatus;
 import ee.webmedia.alfresco.archivals.service.ArchivalsService;
 import ee.webmedia.alfresco.common.web.BeanHelper;
-import ee.webmedia.alfresco.parameters.model.Parameters;
-import ee.webmedia.alfresco.parameters.service.ParametersService;
 
 public class ExecuteArchiveJob implements StatefulJob {
 
     private static final Log LOG = LogFactory.getLog(ExecuteArchiveJob.class);
-    private final SimpleDateFormat ARCHIVING_TIME_FORMAT = new SimpleDateFormat("hh:mm");
+
     private ArchivalsService archivalsService;
     private NodeService nodeService;
-    private ParametersService parametersService;
 
     @Override
     public void execute(JobExecutionContext context) throws JobExecutionException {
         LOG.debug("Starting ExecuteArchiveJob");
         setServices();
 
-        while (!archivalsService.isArchivingPaused() && isArchivingAllowed()) {
+        while (!archivalsService.isArchivingPaused() && archivalsService.isArchivingAllowed()) {
             List<NodeRef> jobList = archivalsService.getAllInQueueJobs();
             if (jobList.isEmpty()) {
                 archivalsService.resetManualActions();
                 break;
             }
-            NodeRef archivingJobRef = jobList.get(0);
-            ArchiveJobStatus jobStatus = archivalsService.getArchivingStatus(archivingJobRef);
-            if (ArchiveJobStatus.IN_PROGRESS.equals(jobStatus)) {
+            Pair<NodeRef, ArchiveJobStatus> jobRefAndStatus = getNextArchivingJobWithStatus(jobList);
+            NodeRef archivingJobRef = jobRefAndStatus.getFirst();
+            ArchiveJobStatus jobStatus = jobRefAndStatus.getSecond();
+            boolean resumingPaused = ArchiveJobStatus.PAUSED.equals(jobStatus);
+            if (ArchiveJobStatus.IN_PROGRESS.equals(jobStatus) || resumingPaused) {
                 // archiving is executed in this thread so IN_PROGRESS job should only get here if server was restarted in the middle of archiving
                 NodeRef volumeRef = (NodeRef) nodeService.getProperty(archivingJobRef, ArchivalsModel.Props.VOLUME_REF);
                 if (!nodeService.exists(volumeRef)) {
                     LOG.warn("Archiving of volume (nodeRef=" + volumeRef + ") was removed from archiving job list.");
+                    if (resumingPaused) {
+                        LOG.warn("Unable to resume paused archiving job");
+                    }
                     archivalsService.removeJobNodeFromArchivingList(archivingJobRef);
                     continue;
                 }
@@ -62,8 +61,25 @@ public class ExecuteArchiveJob implements StatefulJob {
                 continue;
             }
             archivalsService.markArchivingJobAsRunning(archivingJobRef);
-            archivalsService.archiveVolumeOrCaseFile(archivingJobRef);
+            archivalsService.archiveVolumeOrCaseFile(archivingJobRef, resumingPaused);
         }
+    }
+
+    private Pair<NodeRef, ArchiveJobStatus> getNextArchivingJobWithStatus(List<NodeRef> jobList) {
+        Map<NodeRef, Node> jobs = BeanHelper.getBulkLoadNodeService().loadNodes(jobList, Collections.singleton(ArchivalsModel.Props.ARCHIVING_JOB_STATUS));
+        for (Map.Entry<NodeRef, Node> entry : jobs.entrySet()) {
+            ArchiveJobStatus status = getStatus(entry.getValue());
+            if (ArchiveJobStatus.PAUSED.equals(status)) {
+                return Pair.newInstance(entry.getKey(), status);
+            }
+        }
+        Node jobNode = jobs.get(jobList.get(0));
+        return Pair.newInstance(jobList.get(0), getStatus(jobNode));
+    }
+
+    private ArchiveJobStatus getStatus(Node entry) {
+        Map<String, Object> jobProps = entry.getProperties();
+        return ArchiveJobStatus.valueOf((String) jobProps.get(ArchivalsModel.Props.ARCHIVING_JOB_STATUS.toString()));
     }
 
     private void logArchiveResult(NodeRef archivingJobRef) {
@@ -81,64 +97,9 @@ public class ExecuteArchiveJob implements StatefulJob {
         }
     }
 
-    private boolean isArchivingAllowed() {
-        boolean allowedNow = isArchivingAllowedAtThisTime();
-
-        if (allowedNow) {
-            archivalsService.resetManualActions();
-            return true;
-        }
-
-        if (!allowedNow && archivalsService.isArchivingContinuedManually()) {
-            return true;
-        }
-
-        return allowedNow;
-    }
-
-    private boolean isArchivingAllowedAtThisTime() {
-        DateTime now = new DateTime();
-        if (Boolean.valueOf(parametersService.getStringParameter(Parameters.CONTINUE_ARCIVING_OVER_WEEKEND))) {
-            int weekDay = now.getDayOfWeek();
-            if (DateTimeConstants.SATURDAY == weekDay || DateTimeConstants.SUNDAY == weekDay) {
-                return true;
-            }
-        }
-        String beginTimeStr = StringUtils.deleteWhitespace(parametersService.getStringParameter(Parameters.ARCHIVING_BEGIN_TIME));
-        String endTimeStr = StringUtils.deleteWhitespace(parametersService.getStringParameter(Parameters.ARCHIVING_END_TIME));
-        if (StringUtils.isBlank(beginTimeStr) || StringUtils.isBlank(endTimeStr)) {
-            return true;
-        }
-        DateTime beginTime;
-        DateTime endTime;
-        try {
-            beginTime = getDateTime(now, beginTimeStr);
-            endTime = getDateTime(now, endTimeStr);
-            if (beginTime.isAfter(endTime)) {
-                endTime = endTime.plusDays(1);
-            }
-        } catch (ParseException e) {
-            LOG.warn("Unable to parse " + Parameters.ARCHIVING_BEGIN_TIME.getParameterName() + " (value=" + beginTimeStr + ") or "
-                    + Parameters.ARCHIVING_END_TIME.getParameterName() + " (value=" + endTimeStr + "), continuing archiving. " +
-                    "Required format is " + ARCHIVING_TIME_FORMAT.toPattern());
-            return true;
-        }
-        if (beginTime.isBefore(now) && endTime.isAfter(now)) {
-            return true;
-        }
-        return false;
-    }
-
-    private DateTime getDateTime(DateTime now, String timeString) throws ParseException {
-        Calendar calendar = Calendar.getInstance();
-        calendar.setTime(ARCHIVING_TIME_FORMAT.parse(timeString));
-        return new DateTime(now.getYear(), now.getMonthOfYear(), now.getDayOfMonth(), calendar.get(Calendar.HOUR_OF_DAY), calendar.get(Calendar.MINUTE), 0, 0);
-    }
-
     private void setServices() {
         archivalsService = BeanHelper.getArchivalsService();
         nodeService = BeanHelper.getNodeService();
-        parametersService = BeanHelper.getParametersService();
     }
 
 }
